--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,141 @@
-# Byte-compiled / cache files
+# Byte-compiled / optimized / DLL files
 __pycache__/
+src/**/__pycache__/
+src/**/*.pyc
 *.py[cod]
-*$PYTHONPYCACHEPREFIX/
-
-# Environnements virtuels
-venv/
-.env/
-.venv/
-pipenv/
-Pipfile.lock
+*$py.class
+*.pyc
+# C extensions
+*.so
 
 # Distribution / packaging
+.Python
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
+.installed.cfg
 *.egg
+MANIFEST
 
-# Logs et fichiers temporaires
-*.log
-*.tmp
-*.swp
-.DS_Store
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Configurations d'IDE / éditeurs
-.vscode/
-.idea/
-*.iml
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
-
-# Fichiers spécifiques à pytest et coverage
-.coverage
+# Unit test / coverage reports
 htmlcov/
-*.cover
-*.py,cover
-.cache/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
 nosetests.xml
 coverage.xml
-pytest_cache/
-
-# Fichiers générés par MyPy
-.mypy_cache/
-dmypy.json
-dmypy/
-
-# Docker / Kubernetes
-docker-compose.override.yml
-.envrc
-.kube/
-
-# Secrets
-.env
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+*.json
+*.crt
 *.pem
-*.key
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+img/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+/.pypirc
+/coverage_html_report/
+
+# wordlist
+
+/wordlist/rockyou.txt
+/circleci/
+.ruff_cache
