--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.8",
     "requests>=2.32.3",
+    "sherlock-project>=0.15.0",
 ]
 
 [dependency-groups]
